--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 		$(document).ready(function() {
 			$('#fullpage').fullpage({
 				verticalCentered: false,
-        responsive: 900,
         navigation: true,
 				navigationPosition: 'right',
 				css3:false
@@ -36,23 +35,37 @@
 
 <div id="fullpage">
 	<div class="section row table" id="section0">
-    <div class="col-md-4 col-md-offset-1 ">
+    <div class="col-md-3 col-md-offset-1 ">
       <h1>  Rano et son pot ninja </h1>
-      <p> et vas-y que ça envoie du steak au Rock'n'solex ! </p>
+      <h2> "et vas-y que ça envoie du steak au Rock'n'solex !"</h2>
     </div>
   </div>
 	<div class="section" id="section1">
-    <div class="col-md-4 col-md-offset-1 ">
-      <h1>"Si t'as 30 ans et que t'as pas <br />de site internet, t'as raté ta vie !" <br />Nico S.</h1>
+    <div class="col-md-3 col-md-offset-6 ">
+      <h1>Bon Anniversaire !</h1>
+      <h2>"Si t'as 30 ans et que t'as pas de site internet, t'as raté ta vie !" <br />Nico S.</h2>
     </div>
   </div>
 	<div class="section" id="section2">
-    <div class="col-md-4 col-md-offset-1 ">
-      <h1>Héhé</h1>
+    <div class="col-sm-3 fullcol">
+      <div id="v1" class="v"></div>
+      <div id="h1" class="h"></div>
+    </div>
+    <div class="col-sm-3 fullcol">
+      <div id="h2" class="h"></div>
+      <div id="v2" class="v"></div>
+    </div>
+    <div class="col-sm-3 fullcol">
+      <div id="v3" class="v"></div>
+      <div id="h3" class="h"></div>
+    </div>
+    <div class="col-sm-3 fullcol">
+      <div id="h4" class="h"></div>
+      <div id="v4" class="v"></div>
     </div>
   </div>
   <div class="section" id="section3">
-    <div class="col-md-4 col-md-offset-7 ">
+    <div class="col-md-3 col-md-offset-7 ">
       <h1>  Ah bah elle est bien bonne celle la !</h1>
     </div>
   </div>
